--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,15 +1,16 @@
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Permanent+Marker');
 
 body {
-	background-color: #1D1E2C;
-	background: url("home-interior.jpeg");
+	background: #1D1E2C;
+	background: url("https://images.pexels.com/photos/348688/pexels-photo-348688.jpeg");
 	background-size: cover;
 	font-family: "Open Sans", sans-serif;
+	padding: 0 200px;
 }
 h1 {
 	color: #D7CDCC;
 	text-transform: uppercase;
-	font-family: Pacifico, sans-serif;
+	font-family: "Permanent Marker", sans-serif;
 	font-size: 52px;
 	text-align:center;
 }
@@ -31,4 +32,13 @@ ul {
 ul li {
 	color: #9C528B;
 	text-transform: uppercase;
+}
+a {
+	color: #d7cdcc;
+	text-decoration: underline;
+	text-transform: uppercase;
+}
+a:hover {
+	text-decoration: none;
+	color: #9c528b;
 }
