--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -48,3 +48,38 @@ a:hover {
 #contact {
 	font-weight: bold;
 }
+.wrapper {
+	background-color: #FFE2B8;
+    border: 1px black solid;
+    padding: 20px;
+}
+header {
+	background-color: #FFED74;
+    border: 1px black solid;
+    padding: 20px;
+}
+nav {
+	background-color: #E8C66A;
+    border: 1px black solid;
+    padding: 20px;
+}
+section {
+	background-color: #FFE2B8;
+    border: 1px black solid;
+    padding: 20px;
+}
+aside {
+	background-color: #FFC675;
+    border: 1px black solid;
+    padding: 20px;
+}
+article {
+	background-color: #E89C6C;
+    border: 1px black solid;
+    padding: 20px;
+}
+footer {
+	background-color: #FF957E;
+    border: 1px black solid;
+    padding: 20px;
+}
