--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -2,7 +2,7 @@
 
 body {
 	background: #1D1E2C;
-	background: url(/knocker-circle-usd-wood-161922.jpeg);
+	background: url("https://images.pexels.com/photos/296884/pexels-photo-296884.jpeg");
 	background-size: cover;
 	font-family: "Open Sans", sans-serif;
 	padding: 0 200px;
