--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -49,14 +49,14 @@ header p {
 }
 nav {
 	background: #1d1e2c;
-    padding: 2%;
+    padding: 3%;
     margin-bottom: 1%;
 }
 nav a {
 	display: inline;
 	font-size: 1em;
 	background: #1d1e2c;
-	padding: 2%;
+	padding: 3%;
 }
 nav a:hover {
 	background: #fff;
@@ -78,7 +78,7 @@ section a:hover {
 }
 #left {
 	background: #59656f;
-    padding: 1em;
+    padding: .5em;
     float: left;
     width: 33.33%;
 }
@@ -89,7 +89,7 @@ section a:hover {
 }
 #right {
 	background: #d7cdcc;
-    padding: 2em;
+    padding: 1.25em;
     float: right;   
     width: 65.66%;
     color: #1d1e2c;
@@ -147,5 +147,9 @@ footer ul li {
 @media only screen and (max-width: 530px) {
 	body {
 		font-size: 18px;
+	}
+	footer ul li {
+		margin: .75em .5em;
+		width: 100%;
 	}
 }
